# xiaozhi_chat

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md
example/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
example/main/: CMakeLists.txt  board.c  board.h  idf_component.yml  main.c  xiaozhi_app.c
include/: xz_chat.h  xz_common.h  xz_http_client_request.h  xz_protocol.h
priv_include/: xz_board_info.h  xz_chat_priv.h  xz_protocol_priv.h  xz_util.h
src/: xz_board_info.c  xz_chat.c  xz_http_client_request.c  xz_mqtt_protocol.c  xz_util.c  xz_ws_protocol.c
